--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@rails/ujs": "^6",
     "@rails/webpacker": "^4",
     "axios": "^0.19.0",
+    "element-ui": "^2.13.1",
     "turbolinks": "^5.2.0",
     "vue": "^2.6.10",
     "vue-axios": "^2.1.4",
